# kdta_ROS2

./: README.md  bashrc.sh  line_camera_tracing.cpp  map.pgm  map.yaml  model.sdf  resume_link.md  tempo.sh
arithmetic/: CMakeLists.txt  package.xml
arithmetic/include/arithmetic/: argument.hpp  operator.hpp
arithmetic/include/calculator/: calculator.hpp
arithmetic/include/checker/: checker.hpp
arithmetic/launch/: arithmetic.launch.py
arithmetic/param/: arithmetic.yaml
arithmetic/src/: argument.cpp  calculator.cpp
arithmetic/src/arithmetic/: argument.cpp  operator.cpp
arithmetic/src/calculator/: calculator.cpp  main.cpp
arithmetic/src/checker/: checker.cpp  main.cpp
data-local-work-doc/: 프로젝트_계획서 양식.hwp  프로젝트_기술서 양식.hwp
gpiotest/: package.xml  setup.cfg  setup.py
gpiotest/gpiotest/: gpioled.py
interface_example/: CMakeLists.txt  package.xml
interface_example/action/: ArithmeticChecker.action
interface_example/msg/: ArithmeticArgument.msg
interface_example/srv/: AddTwoInt.srv  ArithmeticOperator.srv
moveTSim/: CMakeLists.txt  package.xml
moveTSim/include/moveTSim/: moveTurtle.hpp
moveTSim/src/: moveTurtle.cpp
move_t_sim/: CMakeLists.txt  package.xml
move_t_sim/include/moveTSim/: moveTurtle2.hpp  moveTurtleBotcpp.hpp  moveTurtleBotcpp2.hpp
move_t_sim/src/: canny_camera.cpp  canny_camera2.cpp  follow_wall.cpp  moveTurtle.cpp  moveTurtle2.cpp  moveTurtleBot.cpp  moveTurtleBot2.cpp  moveTurtleBotcpp.cpp  moveTurtleBotcpp2.cpp  moveTurtleSim.cpp  moveTurtleSim2.cpp  nav2_map_odom_tf.cpp  rotate_turtle.cpp  simple_ridar.cpp  stay_thirty.cpp  waypoints_action.cpp
my_tb3_launcher/: CMakeLists.txt  package.xml
my_tb3_launcher/launch/: hlds_laser.launch.py  my_tb3_bringup.launch.py  turtlebot3_state_publisher.launch.py
opencv/ch02/: CMakeLists.txt  aprint.cpp  movewindows.cpp  windows.cpp
opencv/ch03/: CMakeLists.txt  basicOp.cpp  mapOp1.cpp  matOp1.cpp  matOp2.cpp  matOp3.cpp  matOp4.cpp  matOp5.cpp  rectOp.cpp  vecOp.cpp
opencv/ch04/: CMakeLists.txt  drawText.cpp  fileStorageReadTest.cpp  fileStorageTest.cpp  keyboard.cpp  keyboard2.cpp  line.cpp  maskSetTo.cpp  mouseRGBPoint.cpp  mouseTest.cpp  rectangleTest.cpp  trackBarTest.cpp  trackBarTest2.cpp  video.cpp
opencv/ch05/: CMakeLists.txt  brightness.cpp  ch06Logical.cpp  histogram.cpp  histogramEqualization.cpp
opencv/ch07/: CMakeLists.txt  bilateralFilter.cpp  blurr.cpp  filter2D.cpp  gaussianFilter.cpp  shapen.cpp
opencv/ch08/: CMakeLists.txt  affine.cpp  affineRotation.cpp  perspectiveCard.cpp  perspectiveTransform.cpp
opencv/ch09/: CMakeLists.txt  canny.cpp  ch10_inrange.cpp  ch10_splitmerge.cpp  ch10color.cpp  houghline.cpp  houghlineP.cpp
opencv/ch11/: CMakeLists.txt  adaptiveThreshold.cpp  cascade.cpp  hog.cpp  matching.cpp  morphologyEx.cpp  threthold.cpp
opencv/data/: mouseBGRPoint.json  mouseRGBPoint.json  mydata.json  output.avi  output10.avi
opencv/first/: CMakeLists.txt  helloworld.cpp
ppt/ROS2 ppt/: 교안_ROS2 터틀봇_바인드소프트_6_가제보 설치.pptx  교안_ROS2 터틀봇_바인드소프트_동국대_패키지 특강.pptx
ppt/opencv/: Open_cv_01_컴퓨터 비전과 영상의 이해.pptx  Open_cv_02_OpenCV 설치와 기본 사용법.pptx  Open_cv_03_OpenCV 주요 클래스.pptx  Open_cv_04_OpenCV 주요 기능.pptx  Open_cv_05_영상의 밝기와 명암비 조절.pptx  Open_cv_06_영상의 산술 및 논리 연산.pptx  Open_cv_07_필터링.pptx  Open_cv_08_영상의 기하학적 변환.pptx  Open_cv_09_에지검출과 응용.pptx  Open_cv_10_컬러 영상 처리.pptx  Open_cv_11_이진화와 모폴로지.pptx  Open_cv_12_레이블링과 외곽선 검출.pptx  Open_cv_13_객체 검출.pptx  Open_cv_14_지역 특징점 검출과 매칭.pptx  Open_cv_15_머신러닝.pptx  Open_cv_16_딥러닝과 OpenCV.pptx
python/: dic_key_test.py  dict_test.py  example_am_pm.py  example_mutiply_test.py  example_pyramid.py  for_test.py  hello.py  input_test.py  keywordlist.py  list_comprehension.py  list_method1.py  list_method2.py  list_test.py  logical_operator.py  operator_test.py  orange3_test.py  print_test.py  str_indexing.py  str_method.py  variable_circle.py  while_test.py
python/orange/: arraytest.py  orangeReadjon.py  orangeScript1.py  test.py
python/ppt/: 3. 스마트시티환경분야인공지능데이터확보-3.pptx  파이썬_01_03.pptx  파이썬_02_01.pptx  파이썬_02_04.pptx  파이썬_03_01.pptx  파이썬_04_01.pptx  파이썬_04_04.pptx  파이썬_05_02.pptx  파이썬_05_03.pptx  파이썬_06_01.pptx  파이썬_07_01.pptx  파이썬_07_03.pptx  파이썬_08_01.pptx  파이썬_09_01.pptx
simple_pkg_cpp/: CMakeLists.txt  package.xml
simple_pkg_cpp/include/simple_pkg_cpp/: publisher.hpp  subscriber.hpp  time_pub.hpp  time_sub.hpp
simple_pkg_cpp/launch/: action.launch.py  service.launch.py
simple_pkg_cpp/param/: service.yaml
simple_pkg_cpp/src/: cpp_parameter_node.cpp  helloOpenCV.cpp  hello_publisher.cpp  hello_publisher2.cpp  hello_publisher_class.cpp  hello_publisher_class2.cpp  hello_subscriber_class.cpp  helloworld.cpp  publisher.cpp  simple_action_client.cpp  simple_action_server.cpp  simple_service_client.cpp  simple_service_client2.cpp  simple_service_server.cpp  subscriber.cpp  time_pub.cpp  time_publisher_class.cpp  time_sub.cpp  time_subscriber_class.cpp
smart_city/: control-net.json  workflow.json
topic_final/: CMakeLists.txt  package.xml
topic_final/launch/: tmpubsub.launch.py
topic_final/param/: turtlesim.yaml
topic_final/src/: mpub.cpp  msub.cpp  msub2.cpp  mtsub.cpp  tpub.cpp
userlaunch/: package.xml  setup.cfg  setup.py
userlaunch/launch/: v4l2_camera.launch.py
userlaunch/param/: ost.yaml  v4l2_camera.yaml
work-experience-doc/: ASCII_결과보고서.hwp  project report.md
work-experience-doc/VIMO/: 240618_서식115_VIMO 회의록.hwp  서식112_VIMO 지출품의서.hwp
work-experience-doc/foxy/: 240531_서식115_Foxy_회의록.hwp  서식112_Foxy_지출품의서.hwp
work-experience-doc/project_plane/: 수행계획서_ASCII.hwp  수행계획서_로스경험자들.hwp  수행계획서_미래내일청년.hwp  수행계획서_소수지승.hwp  수행계획서_킹왕짱.hwp
work-experience-doc/stern/: 240617_회의록_STERN.hwp  240620_회의록_STERN.hwp  240626_회의록_STERN.hwp  Stern 결과보고서.hwp  Stern팀 지출 품의서.hwp
